--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^7.0.2",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
