--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
+    "react-router": "^4.4.0-beta.8",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
